fixed broken route add/delete

--- a/tasks/createvm.yml
+++ b/tasks/createvm.yml
@@ -7,7 +7,7 @@
     get_checksum: false
   register: qcow_exists
 
-# create vm
+# Block start create vm
 - block:
   - name: create qcow2 file if not exists
     command: "virsh vol-create-as {{ hetzner_hypervisor_default_storage_pool }} {{ vm.name }}.qcow2 {{ vm.size }}G --prealloc-metadata --format qcow2"
@@ -76,21 +76,6 @@
 
   - name: clean up packages
     command: "chroot {{ _bootstrap_target }} eatmydata apt-get clean"
-
-#  - name: copy root password to tmpfile
-#    copy:
-#      content: "root:{{ vm.rootpw }}"
-#      dest: "{{ _bootstrap_target }}/tmppw"
-
-#  - name: set root password
-#    shell: "chroot {{ _bootstrap_target }} chpasswd < {{ _bootstrap_target }}/tmppw"
-#    args:
-#      executable: /bin/bash
-
-#  - name: delete tmpfile
-#    file:
-#      dest: "{{ _bootstrap_target }}/tmppw"
-#      state: absent
 
   - name: umount pseudo filesystems
     command: umount -l {{ _bootstrap_target }}/{{ item }}
@@ -271,13 +256,6 @@
       state: present
     when: ansible_distribution_release == 'stretch' or ansible_distribution_release == 'xenial'
 
-#  - name: keep old eth0 device name
-#    replace:
-#      dest: /mnt/etc/default/grub
-#      regexp: 'GRUB_CMDLINE_LINUX=""'
-#      replace: 'GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0"'
-#    when: ansible_distribution_release == 'stretch' or ansible_distribution_release == 'xenial'
-
   - name: install boot loader (grub)
     command: chroot /mnt grub-install /dev/nbd0
 
@@ -321,14 +299,19 @@
              --graphics vnc,keymap=de
              --console pty,target_type=virtio
 
+  - name: route exists?
+    command: "ip route show {{ vm.ip }}"
+    register: _route_exists
+
   - name: add route
-    command: "route add -host {{ vm.ip }} dev br0 2>/dev/null"
+    command: "route add -host {{ vm.ip }} dev br0"
+    when: _route_exists.stdout == ""
 
-  # Block condition
+  # Block condition create vm
   when: qcow_exists.stat.exists == False
-# Block end
+# Block end create vm
 
-# resize ram and/or cores
+# Block start resize vm
 - block:
 
   # Read the memory content
@@ -347,99 +330,115 @@
       content: text
     register: _vcpu
 
-  - name: register _vmupdate
-    set_fact:
-      _vmupdate: True
-    when: _memory.matches[0].memory|int != (vm.ram * 1024) or _vcpu.matches[0].vcpu|int != vm.cores
-
-  - block:
-    - name: stop vm
-      command: "virsh shutdown {{ vm.name }}"
-
-    - name: update max memory
-      xml:
-        path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
-        xpath: /domain/memory
-        value: "{{ vm.ram * 1024 }}"
-
-    - name: update memory
-      xml:
-        path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
-        xpath: /domain/currentMemory
-        value: "{{ vm.ram * 1024 }}"
-
-    - name: update vcpu
-      xml:
-        path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
-        xpath: /domain/vcpu
-        value: "{{ vm.cores }}"
-
-    - name: define vm
-      command: "virsh define /etc/libvirt/qemu/{{ vm.name }}.xml"
-
-    - name: start vm
-      command: "virsh start {{ vm.name }}"
-
-    when: _vmupdate is defined and _vmupdate == True
-
-  # resize disk
+  # Read the disk size
   - name: read current disk size
     shell: "qemu-img info /var/lib/libvirt/images/{{ vm.name }}.qcow2 | grep virtual | cut -d ' ' -f 3-3 | cut -d '.' -f 1-1"
     args:
       executable: /bin/bash
     register: _size
 
+  - name: fail when the new size is smaller than the old size
+    fail:
+      msg: "The new size for {{ vm.name }} ({{ vm.size }}G) is smaller than the current size ({{ _size.stdout }}G). You can not downscale the disksize. You can only upscale the disk size!"
+    when: _size.stdout|int > vm.size
+
+  - name: register _vmupdate
+    set_fact:
+      _vmupdate: True
+    when: _memory.matches[0].memory|int != (vm.ram * 1024) or _vcpu.matches[0].vcpu|int != vm.cores or _size.stdout|int != vm.size
+
+  # Block start vm update
   - block:
-
-    - name: fail when the new size is smaller than the old size
-      fail:
-        msg: "The new size for {{ vm.name }} ({{ vm.size }}G) is smaller than the current size ({{ _size.stdout }}G). You can not downscale the disksize. You can only upscale the disk size!"
-      when: _size.stdout|int > vm.size
-
-    - name: additional disk space
-      set_fact:
-        _size_diff: "{{ vm.size - _size.stdout|int }}"
-
+    
     - name: stop vm
       command: "virsh shutdown {{ vm.name }}"
 
-    - name: resize disk
-      command: "qemu-img resize {{ hetzner_hypervisor_vms_path }}{{ vm.name }}.qcow2 +{{ _size_diff }}G"
+    # Block start resize memory
+    - block:
 
-    - name: connect the qcow device
-      command: "qemu-nbd -c /dev/nbd0 {{ hetzner_hypervisor_vms_path }}{{ vm.name }}.qcow2"
+      - name: update max memory
+        xml:
+          path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
+          xpath: /domain/memory
+          value: "{{ vm.ram * 1024 }}"
 
-    - name: Fix qcow2 disk
-      command: sgdisk -e /dev/nbd0
+      - name: update memory
+        xml:
+          path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
+          xpath: /domain/currentMemory
+          value: "{{ vm.ram * 1024 }}"
 
-    - name:
-      shell: "parted /dev/nbd0 --script print free | grep 'Disk /dev/nbd0' | cut -d ' ' -f 3-3"
-      args:
-        executable: /bin/bash
-      register: _resize
+      # Block condition resize memory
+      when: _memory.matches[0].memory|int != (vm.ram * 1024)
+    # Block end resize memory
 
-    - name: resize the partition
-      command: "parted /dev/nbd0 --script resizepart 3 {{ _resize.stdout }}"
+    # Block start resize cores
+    - block:
 
-    - name: mount xfs
-      command: mount /dev/nbd0p3 /mnt/
+      - name: update vcpu
+        xml:
+          path: "/etc/libvirt/qemu/{{ vm.name }}.xml"
+          xpath: /domain/vcpu
+          value: "{{ vm.cores }}"
 
-    - name: grow xfs
-      command: xfs_growfs /mnt/
+      # Block condition resize cores
+      when: _vcpu.matches[0].vcpu|int != vm.cores
+    # Block end resize cores
 
-    - name: unmount xfs
-      command: umount /mnt
+    # reload xml
+    - name: reload xml
+      command: "virsh define /etc/libvirt/qemu/{{ vm.name }}.xml"
+      when: _memory.matches[0].memory|int != (vm.ram * 1024) or _vcpu.matches[0].vcpu|int != vm.cores
 
-    - name: disconnect
-      command: qemu-nbd --disconnect /dev/nbd0
+    # Block start resize disk
+    - block:
+
+      - name: additional disk space
+        set_fact:
+          _size_diff: "{{ vm.size - _size.stdout|int }}"
+
+      - name: resize disk
+        command: "qemu-img resize {{ hetzner_hypervisor_vms_path }}{{ vm.name }}.qcow2 +{{ _size_diff }}G"
+
+      - name: connect the qcow device
+        command: "qemu-nbd -c /dev/nbd0 {{ hetzner_hypervisor_vms_path }}{{ vm.name }}.qcow2"
+
+      - name: Fix qcow2 disk
+        command: sgdisk -e /dev/nbd0
+
+      - name:
+        shell: "parted /dev/nbd0 --script print free | grep 'Disk /dev/nbd0' | cut -d ' ' -f 3-3"
+        args:
+          executable: /bin/bash
+        register: _resize
+
+      - name: resize the partition
+        command: "parted /dev/nbd0 --script resizepart 3 {{ _resize.stdout }}"
+
+      - name: mount xfs
+        command: mount /dev/nbd0p3 /mnt/
+
+      - name: grow xfs
+        command: xfs_growfs /mnt/
+
+      - name: unmount xfs
+        command: umount /mnt
+
+      - name: disconnect
+        command: qemu-nbd --disconnect /dev/nbd0
+
+      # Block condition resize disk
+      when: _size.stdout|int != vm.size
+    # Block end resize disk
 
     - name: start vm
       command: "virsh start {{ vm.name }}"
 
-    when: _size.stdout|int != vm.size
+    # Block condition vm update
+    when: _vmupdate is defined and _vmupdate == True
+  # Block end vm update
 
-
-  # Block condition
+  # Block condition resize vm
   when: qcow_exists.stat.exists == True
-# Block end
+# Block end resize vm
 ...
