--- a/tasks/createstoragepool.yml
+++ b/tasks/createstoragepool.yml
@@ -4,6 +4,8 @@
   file:
     path: "{{ hetzner_hypervisor_vms_path }}"
     state: directory
+    owner: root
+    group: root
     mode: 0755
 
 - name: create images directory
