--- a/tasks/createvm.yml
+++ b/tasks/createvm.yml
@@ -22,6 +22,7 @@
 
   - name: mount tmpfs
     command: "mount -t tmpfs -o size=2G none {{ _bootstrap_target }}"
+    warn: False
 
   - name: set debian distro url
     set_fact:
@@ -41,6 +42,7 @@
   - name: bind mount pseudo filesystems
     shell: "mkdir -p {{ _bootstrap_target }}/{{ item }}; mount -o bind /{{ item }} {{ _bootstrap_target }}/{{ item }}"
     register: _pseudomount
+    warn: False
     with_items:
     - proc
     - sys
